--- a/css/estilo.css
+++ b/css/estilo.css
@@ -614,27 +614,143 @@ font-size: 150%;
     padding-left: 3%;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*aca empieza quinta seccion con mis habilidades*/
+
+.quinta {
+    display: flex;
+    padding-top: 50px;
+    margin-top: 5%;
+    padding-left: 8.5%;
+    width: 1070px;
+    height: 60px;
+}
+.quinta h2 {
+    margin-left: 0%;
+    height: 30px;
+    width: 240px;
+}
+.quintaBis {
+    display: flex; 
+    justify-content: space-between;
+    margin-left: 8.5%;
+    margin-top: 3%;
+    width: 550px;
+    height: 250px;
+}
+.quintaBis h3 {
+    margin-top: 10px;
+    /*para controlar ancho barra*/
+    width: 550px;
+    height: 50px;
+    display: flex;
+    justify-content:space-between;
+    font-size: 100%;
+}
+.quintaBis span {
+    width: 70px;
+    height: 35px;
+    margin-left: 69%;
+    text-align: left;
+}
+.barraDeProgreso {
+    margin-top: 10px;
+    width: 480px;
+    height: 10px;
+    /*para controlar barra de progreso*/
+    padding-right: 5%;
+    border-radius: 5px; 
+    overflow: hidden; 
+    background-color: gainsboro; 
+}
+.porcentaje1 {
+    width: 288px;
+    height: 10px;
+    /*border: var(--paraBordes);*/
+    background-color: var(--colorElegido);  
+}
+.porcentaje2 {
+    width: 432px;
+    height: 10px;
+    /*border: var(--paraBordes);*/
+    background-color: var(--colorElegido);  
+}
+.porcentaje3 {
+    width: 408px;
+    height: 10px;
+    /*border: var(--paraBordes);*/
+    background-color: var(--colorElegido);  
+}
+.porcentaje4 {
+    width: 336px;
+    height: 10px;
+    /*border: var(--paraBordes);*/
+    background-color: var(--colorElegido);  
+}
+.porcentaje5 {
+    width: 288px;
+    height: 10px;
+    background-color: var(--colorElegido);  
+}
+.porcentaje6 {
+    width: 475px;
+    height: 10px;
+    /*border: var(--paraBordes);*/
+    background-color: var(--colorElegido);  
+}
+.botonCV {
+    color: var(--colorElegido);
+    border: 1px solid black;
+    font-size: 100%;
+    width: 180px;
+    height: 50px;
+    background-color: white;
+    justify-content: center;
+    margin: 50px 42.5%;
+    border-radius: 5px;
+    /*margin-left: 41%;
+    margin-top: 50px;*/
+  }
+  .botonCV:hover {
+    cursor: pointer;
+    background-color: var(--colorParaFondo);
+  }
+  .botonCV a {
+    text-decoration: none;
+    color: var(--colorElegido);
+    
+  }
+  .botonCV a:hover {
+    color: black;
+    text-decoration-line: underline;
+  }
+  @media(max-width: 1170px) {
+    .quinta { 
+        margin-top: 650px;
+        padding-left: 37%;
+
+    }
+  }
+  @media(max-width:1200px) {
+    .quintaBis {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+    }
+  }
+  @media(max-width:1200px) {
+    .botonCV {
+        margin-top: 300px;
+    }
+  }
+  
+  /*aca empieza sexta seccion sobre proyectos*/
+
+
+
+ .sexta {
+    background-color: var(--colorParaFondo);
+    width: 100%;
+    height: 1400px;
+    padding-top: 70px;
+    margin-top: 50px;
+  }
