--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Solway&display=swap');
 * {
     margin: 0;
@@ -46,8 +45,7 @@ header div a:hover {
     color: var(--colorElegido);
 }
 .hamburguesa {
-    display: none;
-    
+    display: none;   
 }  
 @media(max-width:840px) {
     nav, header div {
@@ -62,12 +60,6 @@ header div a:hover {
 main {
     font-family: Solway, cursive;
 }
-/* section {
-    width: 100%;
-    height: 600px;
-    background-color: var(--colorElegido);
-    display: flex;  
-} */
 .primera {
     /* border: 1px solid red; */
     /* background-color: blue; */
@@ -75,6 +67,76 @@ main {
     height: 615px;
     display: flex;
     background-color: var(--colorElegido);
+}
+.izquierda {
+    width: 50%;
+    height: 360px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    margin-left: 100px;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+} 
+.izquierda h2 {
+    margin-top: 100px;
+    font-size: 200%;
+} 
+.izquierda h1 {
+    width: 650px;
+    height: 100px;
+    /* border: var(--paraBordes); */
+    height: 70px;
+    font-size: 350%; 
+}
+.izquierda h3 {
+    padding: 20px 0;
+    margin-bottom: 30px;
+}
+.botones {
+    display: flex;
+    /* border: var(--paraBordes);  */
+    width: 50%;
+    
+    justify-content: space-between;
+    text-align: center;
+}
+.boton1 {
+    width: 160px;
+    min-width: 150px;
+    min-height: 50px;
+    /* border: var(--paraBordes); */
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    padding: 15px;
+    border-radius: 5px;
+}
+.boton1:hover {
+    color: var(--colorElegido);
+}
+.boton2 {
+    width: 160px;
+    height: 50px;
+    /* border: var(--paraBordes); */
+    color: black;
+    padding-top: 15px;
+}
+.boton2:hover {
+    text-decoration: none;
+    border: var(--colorParaFondo);
+}
+.derecha {
+    width: 50%;
+    height: 600px;  
+}
+.imagenPerfil {
+    margin-top: 150px;
+    margin-left: 100px;
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
+    border: 10px solid white;
 }
 @media(max-width:1266px) {
     .primera {
@@ -92,11 +154,7 @@ main {
         width: 550px;
         height: 600px;
         margin-right: 100px;
-        padding-top: 100px;
-        
-        /* margin-left: -100px; */
-        
-        
+        padding-top: 100px;     
     }
     .izquierda {
         /* border: var(--paraBordes); */
@@ -104,257 +162,227 @@ main {
         display: flex;
         flex-direction: column;
         width: 600px;
+        justify-content: center;
     }
     .izquierda h2 {
-        margin-left: -100px;
+        /* border: var(--paraBordes); */
+        width: 380px;
+        margin-right: 100px;
+        margin-bottom: 20px;
     }
     .izquierda h1 {
         font-size: 350%;
-        padding: 20px 0;
-        margin-left: -70px;
-    }
-    .izquierda h3 {
+        width: 650px;
         margin-right: 100px;
-        margin-bottom: 0px;
     }
-    .flecha {
-        display: none;
-    }
-    .imagenPerfil {
-        margin-left: 0px;
-        margin-top: 0px;
-    }
-    .boton1 {
-        
-        margin-top: 0px;
-        margin-bottom: 0px;
-        margin-right: 20px;
-    }
-    .boton2 {
-        margin-right: 75px;
-        /* border: var(--paraBordes); */
-    }
-}
-@media(max-width:768px) {
     .izquierda h3 {
-    width: 600px;
-    text-align: center;
-      /* border: var(--paraBordes);  */ 
+        /* border: var(--paraBordes); */
+        width: 370px;
+        margin-right: 100px;
     }
-    .boton1 {
-        margin-right: -10px;  
+    .botones {
+        /* border: var(--paraBordes); */
+        height: 50px;
+        width: 370px;
+        margin-right: 85px;
     }
 }
-
+@media(max-width:1200px) {
+    .izquierda h2 {
+        /* border: var(--paraBordes); */
+        width: 380px;
+        margin-right: 100px;
+        margin-bottom: 20px;
+    }
+    
+    .izquierda h1 {
+        /* border: var(--paraBordes); */
+        font-size: 350%;
+        width: 640px;
+        margin-right: 100px;
+    }
+    .izquierda h3 {
+        /* border: var(--paraBordes); */
+        width: 370px;
+        margin-right: 100px;
+    }
+    .botones {
+        /* border: var(--paraBordes); */
+        width: 100%;
+        margin-right: 100px;        
+    }
+}
+@media(max-width:992px) {
+    
+    .izquierda h2 {
+        width: 380px;
+        margin-right: 100px;
+        margin-bottom: 20px;
+    }
+    
+    .izquierda h1 {
+        width: 640px;
+        margin-right: 100px;
+        font-size: 350%;
+    }
+    .izquierda h3 {
+        width: 370px;
+        margin-right: 100px;
+    }
+    .botones {
+        /* border: var(--paraBordes); */
+        margin-right: 110px;
+    }
+    .boton1 {
+        margin-right: 30px;
+    }
+    }
+@media(max-width:768px) {
+    .botones {
+        /* border: var(--paraBordes); */
+        margin-left: 20px;
+    } 
+    .izquierda h1 {
+        font-size: 350%; 
+        margin-right: 80px;
+    }   
+}
 @media(max-width:576px) {
     .izquierda h2 {
         /* border: var(--paraBordes); */
-      font-size: 80%;  
+      font-size: 195%;  
       text-align: center;
       width: 100%;
     }
     .izquierda h1 {
         font-size: 300%;
-        margin-left: 20px;
-      /* border: var(--paraBordes);  */ 
+        margin-left: 100px;
     }
-    .boton1 {
-        margin-left: -45px;  
-    } 
-}
+    .botones {/* 
+        border: var(--paraBordes); */
+        width: 400px;
 
+    }
+}
 @media(max-width:412px) {
-    .primera {
-        width: 100%;
-        height: 700px;
+      .izquierda h2 {/* 
+          border: var(--paraBordes); */
+        font-size: 160%;  
+        text-align: center;
+        width: 380px;
+      }
+      .izquierda h1 {
+        width: 450px;
+        font-size: 210%;
+        margin-left: 50px;
+      }
+    .botones {
+        margin-right: 100px;
     }
-    .derecha {
-        width: 100%;
-        height: 100%;
-        border: var(--paraBordes);
-    } 
-    .imagenPerfil {
-        margin-top: 0px;
-        width: 100px;
-        height:100px;
-    }
-    .izquierda h2 {
-      border: var(--paraBordes);
-      font-size: 0%;  
+}
+@media(max-width:384px) {
+    .izquierda h2 {/* 
+        border: var(--paraBordes); */
+      font-size: 140%;  
       text-align: center;
-      width: 300px;
-      height: 100px;
+      width: 380px;
     }
     .izquierda h1 {
-        font-size: 270%;
-        padding-top: 20px;
-        margin-right: 120px;
-        text-align:center;
-        width: 400px;
-        height: 100%;
-      /* border: var(--paraBordes);  */
+      width: 450px;
+      font-size: 200%;
+      margin-left: 80px;
     }
-    .izquierda h3 {
-        /* border: var(--paraBordes); */
-    }
-    /* .botones {
-        display: flex;
-        justify-content: space-around;
-        border: var(--paraBordes);
-        width: 100%;
-        height: 100%;
-    } */
-    .boton1 { 
-        position: relative;
-        right: 70px;    
-    } 
-    .boton2 {
-       position: relative;
-       left: 90px;
-       bottom: 20px;
-    }
+  .botones {
+      margin-right: 130px;
+      margin-left: 50px;
+  }
+  .boton1 {
+    margin-right: 0px;
+  }
 }
 
-.izquierda {
-    width: 50%;
-    height: 360px;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    margin-left: 100px;
-    text-align: left;
-    align-items: center;
-    justify-content: center;
-} 
-.izquierda h2 {
-    margin-top: 100px;
-    font-size: 200%;
-} 
-h1 {
-    width: 650px;
-    height: 70px;
-    font-size: 360%;
-}
-.izquierda h3 {
-    padding: 20px 0;
-    margin-bottom: 30px;
-}/* 
-.botones {
-    border: var(--paraBordes);
-    width: 50%;
-    background-color: blueviolet;
-} */
-.boton1 {
-    border: var(--paraBordes); 
-    text-decoration: none;
-    background-color: black;
-    color: white;
-    padding: 15px;
-    margin-top: 50px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-}
-.boton1:hover {
-    background-color: var(--colorParaFondo);
-    color: var(--colorElegido);
-}
-.boton2 {
-    text-decoration: none;
-    color: gray;
-    padding: 15px;
-    margin-top: 50px;
-    margin-bottom: 15px; 
-    border-radius: 2px;  
-}
-.boton2:hover {
-    color: white;
-}
-.derecha {
-    width: 50%;
-    height: 600px;  
-}
-.imagenPerfil {
-    margin-top: 150px;
-    margin-left: 100px;
-    width: 400px;
-    height: 400px;
-    border-radius: 200px;
-    border: 10px solid white;
-}
-.flecha {
-    background-color: var(--colorElegido);
-    width: 100%;
-    height: 10px;
-    margin-left: 45%;
-    margin-top: 120px;
-}
 /*aca empieza segunda seccion con presentación*/
+
+
 .segunda {
-    border: var(--paraBordes);
-    padding-top: 10px;
     width: 100%;
-    height: 750px;
+    height: 560px;
+    /* background-color: aqua; */
+    
+}
+.encabezado {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 260px;
     background-color: white;
-        /*padding-bottom: 20px;*/
+}
+.encabezado p {
+    width: 113px;
+    min-width: 113px;
+    background-color: var(--colorElegido);
+    text-align: center;
+    margin-bottom: 40px;
+}
+.encabezado h2 strong {
+    width: 24%;
+    height: 50px;
+    /* border: var(--paraBordes); */
+    font-size: 150%;
 }
 .segundabis {
+    /* border: var(--paraBordes); */
     display: flex;
-    /*border: 1px solid black;*/
     width: 100%;
-    height: 375px;
+    justify-content: space-between;
+    /* align-items: center; */
+    
 }
-.encabezado1 {
-    /* border: var(--paraBordes); */
-}
-.encabezado2 {
-    /* border: var(--paraBordes); */
-    height: 500px;
-}
-.encabezado1 p{
-    color: black;
-    background-color: var(--colorElegido);
-    align-items: center;
-    margin: 100px auto;
-    font-size: 100%;
-    width: 102px;
-    height: 22px; 
-}
-.encabezado1 h2 {
-    color: black;
-    margin: 20px 0 0 0;
-    text-align: center;
-    font-size: 200%;
-}
-.presentacion {
+.textos {
+    margin-left: 7%;
+    width:70% ;
+    /* background-color: bisque; */
+    height: 300px;
     display: flex;
-    flex-wrap: wrap;
+    align-items: left;
     flex-direction: column;
 }
-.presentacion h2 {
-    /*border: 1px solid black;*/
-    margin-left: 13%;
-    margin-top: 5%;
-    font-size: 200%;
-    width: 725px;
+.textos h2 {
+    width: 100%;
     height: 50px;
+    font-size: 230%;
 }
-.presentacion h2 span {
-    text-decoration: underline rgb(181, 245, 168);
+.textos h2 span {
+    text-decoration: underline var(--colorElegido);
 }
-.presentacion p {
-    /* border: 1px solid black;  */
-    margin-left: 13%;
-    margin-top: 1%;
+.textos p {
+    width: 100%;
+    height: 380px;
     font-size: 150%;
-    width: 725px;
-    height: 200px;
 }
 .experiencia1 {
-    /* border: 1px solid black; */
-    margin-left: 15%;
-    margin-top: 2.7%;
-    margin-right: 0%;
-    width: 400px;
-    height: 258px;
+    width:50% ;
+    height: 300px;
+    /* background-color: brown; */
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.experiencia1 h1 {
+    background-color: var(--colorElegido);
+    width: 150px;
+    height: 150px;
+    border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1300%;
+    animation-name: escala;
+    animation-duration: 6s;
+    animation-iteration-count: 2;
 }
 @keyframes escala {
     0%{
@@ -367,67 +395,37 @@ h1 {
     transform: scale 1.2;
 }
 }
-.experiencia1 h1 {
-display: flex;
-/*border: 1px solid black;*/
-border-radius: 100px;
-font-size: 1300%;
-text-align: center;
-justify-content: center;
-align-items: center;
-width: 120px;
-height: 120px; 
-background-color: var(--colorElegido);
-/*padding: 60px;*/
-margin-top: 40px;
-margin-left: 130px;
-margin-bottom: 20px;
-animation-name: escala;
-animation-duration: 6s;
-animation-iteration-count: 2;
-}
-
 .experiencia1 h4 {
-margin-top: 20px;
-text-align: center;
-font-size: 150%;
+    /* border: var(--paraBordes); */
+    font-size: 200%;
+    align-items: center;
 }
-@media(max-width:1196px) {
-    .segunda {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column; 
-        height: 1040px;  
-        /* border: var(--paraBordes); */
-    }
+@media(max-width:992px){
+    .textos {
+        margin-left: 3%;
+    }    
+}
+@media(max-width:768px){
     .segundabis {
-        display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
-    }
-    .encabezado1 h2 {
-        padding-bottom: 50px;
-    }
-    .encabezado2 {
-        padding-top: 60px;
-    }
-    .presentacion h2 {
-        width: 100%;
-        height: 100px;
-        text-align: center;
-        margin-left: 0%;
-        /* border: var(--paraBordes);  */
-    }
-    .presentacion  p{
-        margin-left: 5%;
-        width: 90%;
-        height: 200px;
-        text-align: center;
     }
     .experiencia1 {
-        margin-left: 0%;
+        margin-top: 50px;
+    }
+}
+@media(max-width:576px){
+    .textos h2 {
+        margin-bottom: 50px;
+    }
+    .experiencia1 {
+        margin-top: 200px;
+    }
+}
+@media(max-width:412px){
+    .experiencia1 {
+        margin-top: 370px;
     }
 }
 .tabladatos {
